fix(workspaces): add a lil gap between icon and name in the workspaces button

--- a/src/browser/base/content/zen-styles/zen-workspaces.css
+++ b/src/browser/base/content/zen-styles/zen-workspaces.css
@@ -38,6 +38,7 @@
       display: flex;
       padding: 2px 10px;
       width: calc(100% - var(--zen-tabbrowser-padding) * 8) !important;
+      gap: 0.5ch;
     }
   }
 }
